<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="enter_gmail_id">Enter Gmail-ID</string>
    <string name="are_you_new_user_click_to_signup">Are you new User..! Click to Signup</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_qr">Show QR Code</string>
    <string name="home">Home</string>
    <string name="my_cards">MY Cards</string>
    <string name="my_balance">My Balance</string>
    <string name="total_balance">Total Balance</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="add_card_details">Add Card Details</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_card">Add Card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="add_your_card">Add Your Card</string>
    <string name="inr_with">₹%1$s</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout_content">Are you sure you want to log out?</string>

</resources>