<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/login_to_continue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toTopOf="@+id/UserName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/UserName"
        style="@style/editText"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_gmail_id"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@id/userPwd"
        android:textColorHint="@color/grey"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userPwd"
        style="@style/editText"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_password"
        app:layout_constraintEnd_toEndOf="@id/UserName"
        app:layout_constraintStart_toStartOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_marginTop="16sp"
        android:background="@drawable/button_alter"
        android:text="@string/login"
        style="@style/buttonStyle"
        app:layout_constraintEnd_toEndOf="@+id/userPwd"
        app:layout_constraintStart_toStartOf="@id/userPwd"
        app:layout_constraintTop_toBottomOf="@id/userPwd"
        app:layout_constraintBottom_toTopOf="@id/signUp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:gravity="center"
        android:text="@string/are_you_new_user_click_to_signup"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

</androidx.constraintlayout.widget.ConstraintLayout>