<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RegisterFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backBtn"
        android:layout_width="28dp"
        android:layout_height="28sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:gravity="center_vertical"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/UserName"
        style="@style/editText"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16sp"
        android:hint="@string/enter_gmail_id"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userPwd"
        style="@style/editText"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        app:layout_constraintEnd_toEndOf="@id/UserName"
        app:layout_constraintStart_toStartOf="@id/UserName"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirmPwd"
        style="@style/editText"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/userPwd"
        app:layout_constraintStart_toStartOf="@id/userPwd"
        app:layout_constraintTop_toBottomOf="@+id/userPwd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        style="@style/buttonStyle"
        android:layout_marginBottom="16sp"
        android:background="@drawable/button_alter"
        android:text="Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirmPwd"
        app:layout_constraintStart_toStartOf="@id/confirmPwd" />


</androidx.constraintlayout.widget.ConstraintLayout>