<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backBtn"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:src="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:gravity="center_vertical"
                android:text="@string/add_card_details"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                app:layout_constraintStart_toEndOf="@+id/backBtn"
                app:layout_constraintTop_toTopOf="@+id/backBtn" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="22sp"
                android:background="@drawable/custom_textview"
                android:layout_marginEnd="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/backBtn"
                app:layout_constraintTop_toBottomOf="@+id/backBtn" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/desc"
                style="@style/editText"
                android:layout_marginTop="16sp"
                android:hint="@string/enter_description"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/amt"
                style="@style/editText"
                android:layout_marginTop="16sp"
                android:inputType="number"
                android:hint="@string/enter_amount"
                app:layout_constraintEnd_toEndOf="@+id/desc"
                app:layout_constraintStart_toStartOf="@+id/desc"
                app:layout_constraintTop_toBottomOf="@+id/desc" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addCardBtn"
                style="@style/buttonStyle"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:text="@string/add_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/amt"
                app:layout_constraintStart_toStartOf="@+id/amt"
                app:layout_constraintTop_toBottomOf="@+id/amt" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>