<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:text="@string/add_your_card"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/addCardTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addCardTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/add_card"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardRV"
        app:layout_constraintStart_toStartOf="@+id/backBtn"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="16sp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCardTxt"
        app:layout_constraintBottom_toTopOf="@+id/cardCons"
        tools:listitem="@layout/card_list_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        app:layout_constraintBottom_toTopOf="@+id/amt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/barCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:src="@drawable/barcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/barCodeTxt"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/amt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:inputType="number"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:backgroundTint="@color/color_primary"
        android:hint="@string/enter_amount"
        android:textColorHint="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueBtn"
        style="@style/buttonStyle"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>