<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backBtn"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:src="@drawable/back_arrow"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settingBtn"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:src="@drawable/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="14sp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/settingBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingBtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_gradient">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blcTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:background="@color/transparent"
                android:text="@string/my_balance"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blcTxt" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp"
                android:text="@string/total_balance"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/walDetRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"
        android:orientation="vertical"
        android:background="@color/transparent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/walletBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CV"
        tools:listitem="@layout/cards_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/walletBtn"
        style="@style/buttonStyle"
        android:layout_marginBottom="16sp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/button_alter"
        android:text="@string/add_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/walDetRV"
        app:layout_constraintStart_toStartOf="@+id/walDetRV" />

</androidx.constraintlayout.widget.ConstraintLayout>